# fiber-endpoints

./: Dockerfile.fastapi  Dockerfile.fiber  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  main.go  model.txt  pyproject.toml  settings.toml
cmd/: main.go
cmd/app/: main.go
config/: config.go  settings.toml
internal/config/: config.go
internal/handlers/: inference.go
internal/logging/: logging.go
internal/routes/: health.go  inference.go
internal/schema/: inference.go
internal/tracing/: tracing.go
modelling/: main.py
notebooks/: benchmark.ipynb
src/: app.py  config.py  otel.py  schema.py  train.py
src/data/: sklearn.py
